# RestrictPDF

./: .gitignore  CMakeLists.txt  README.md  ccoinitializer.cpp  ccoinitializer.hpp  fileopendialog.cpp  fileopendialog.hpp  icon.txt  main.cpp  main.manifest  main.rc  main.rc.in  parameters.hpp  util.cpp  util.hpp
